Fixed - Send Email for activation in services

--- a/servers/apps/users/email-templates/forgot-password.ejs
+++ b/servers/apps/users/email-templates/forgot-password.ejs
@@ -87,7 +87,7 @@
       <div class="email-footer">
         <p>
           If you have any questions, please don't hesitate to contact us at
-          <a href="mailto:support@becodemy.com">support@abc.com</a>
+          <a href="mailto:support@abc.com">support@abc.com</a>
         </p>
       </div>
     </div>
